gardener/deploy/kcp/validating-admission-policy-binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: "demo-binding-test.example.com"
spec:
  policyName: "gardener-shoot-name-length-policy"
  validationActions: [Deny]
